--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,7 @@ img {
 	margin: -25px 0 0 0;
 	font-weight: 500;
 	font-size: 60px;
-	color: #FFA000;
+	color: #314B70;
 }
 
 /****** Click Styling ******/
