--- a/public/css/main.css
+++ b/public/css/main.css
@@ -147,6 +147,11 @@ img {
 	color: #212121;
 }
 
+.btn-remove {
+	background-color: #DF0101;
+	color: #212121;
+}
+
 #click-nbr {
 	font-weight: 400;
 }
